--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = bulk-user-import
-version = 0.1.1
-description = Bulk register users via CSV from Django Admin
+version = 0.1.2
+description = Bulk register users via CSV from Django Admin with metadata fields
 long_description = file: README.md
 long_description_content_type = text/markdown
 license = MIT
@@ -11,7 +11,7 @@ packages = find:
 include_package_data = True
 install_requires =
     Django>=2.2
-    django-import-export>=2.5
+    django-import-export>=4.4.0
 
 [options.packages.find]
 exclude =
